[package]
name = "vox"
authors = ["Emil Sayahi <sayahie@miamioh.edu>"]
description = "A performant static site generator built to scale."
repository = "https://github.com/emmyoh/vox/"
license = "AGPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[lib]
name = "vox"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "vox"
path = "src/main.rs"
doc = false
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde", "unstable-locales"] }
clap = { version = "4.5.20", features = ["derive", "cargo"], optional = true }
comrak = { version = "0.29.0", features = ["syntect", "shortcodes"], default-features = false }
daggy = { version = "0.8.0", features = ["stable_dag"] }
toml = "0.8.19"
liquid = "0.26.9"
liquid-core = "0.26.9"
liquid-lib = { version = "0.26.9", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
serde = "1.0.213"
sys-locale = "0.3.1"
latex2mathml = "0.2.3"
ahash = { version = "0.8.11", features = ["std", "serde", "runtime-rng"] }
mimalloc = { version = "0.1.43", optional = true }
ticky = { version = "1.0.2" }
miette = { version = "7.2.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "1.0.65"
glob = "0.3.1"
tokio = { version = "1.41.0", features = ["full"], optional = true }
futures = "0.3.31"
tracing-subscriber = { version = "0.3.18", optional = true, features = ["env-filter"]}
tracing = "0.1.40"
notify-debouncer-full = { version = "0.4.0", default-features = false, optional = true }
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.9.0", optional = true }
layout-rs = "0.1.2"
html-escape = "0.2.13"
syntect = "5.2.0"
path-clean = "1.0.1"

[features]
default = []
cli = ["fs_provider", "dep:mimalloc", "dep:tokio", "dep:clap", "dep:tracing-subscriber", "dep:notify-debouncer-full", "dep:actix-files", "dep:actix-web"]
fs_provider = []